# Whatsapp_AI_Assitant

./: .gitignore  conversations.db  pyproject.toml  requirements.txt
app/: config.py  db_manager.py  llm_client.py  llm_service.py  main.py  models.py
