[project]
name = "python-client"
version = "0.1.0"
description = "Whatsapp AI client "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles",
    "fastapi>=0.115.12",
    "google-genai",
    "httpx>=0.28.1",
    "import",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.2",
]
